feat: support Java 17 release target